updated canvas functionality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- End Nav Bar-->
     <header class="js-header"> 
         <h1 class="courier">Hey there! I'm Ana.</h1>
-        <div class="cursive click js-hide" onclick="startCanvas(), changeText()">
+        <div class="cursive click js-hide" onclick="makeCircles(), changeText()">
             Click here to start the fun!
         </div>
         <div class="courier intro-text js-appear hidden">
