working on nav styles for mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </canvas>
     <!--Nav Bar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -105,7 +104,7 @@
             <label for="name">Name: <input type="text" name="name" id="name" required="required"></label>
             <label for="email">E-Mail: <input type="email" name="email" id="email" required="required"></label>
             <label htmlFor="comments">Comments:</label>
-            <textarea name="comments" id="comments" rows="10" cols="40" placeholder="Enter Your Comments Here" required="required">
+            <textarea name="comments" id="comments" placeholder="Enter Your Comments Here" required="required">
             </textarea>
             <button class="contact-submit" value="submit">Submit</button>
         </form>
