added letter falling effect

--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
     </nav>
     <!-- End Nav Bar-->
     <header class="js-header activate-on-scroll home" id="home"> 
-        <h1 class="courier">Hey there! I'm Ana.</h1>
+        <div class="letters courier">
+                <div class="letters-move word">Hey</div>
+                <div class="letters-move word">There!</div>
+                <div class="letters-move word">I'm</div>
+
+                <div class="letters-move letter name">A</div>
+                <div class="letters-move letter">n</div>
+                <div class="letters-move letter">a</div>
+                <div class="letters-move letter">.</div>
+
+        </div>
         <div class="cursive click intro-text js-hide" onclick="makeCircles(), changeText()">
             Click here to start the fun!
         </div>
@@ -119,6 +129,7 @@
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/canvas.js"></script>
     <script src="scripts/header.js"></script>
