removed falling letter for the moment

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     </nav>
     <!-- End Nav Bar-->
     <header class="js-header activate-on-scroll home" id="home"> 
+        <h1 class="courier">Hey there! I'm Ana.</h1>
+        <!--
         <div class="letters courier">
             <div class="letters-move word">Hey</div>
             <div class="letters-move word">There!</div>
@@ -49,6 +51,7 @@
             <div class="letters-move letter">a</div>
             <div class="letters-move letter">.</div>
         </div>
+        -->
         <div class="cursive click intro-text js-hide" onclick="makeCircles(), changeText()">
             Click here to start the fun!
         </div>
