--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p class="about-me-header" id="about-me">Who is Ana Judd?</p>
     <div class="about-me activate-on-scroll">
         <div class="about-me-intro">
-            <img class="appear-left show-on-scroll pic-prop" src="images/pic.jpg" />
+            <img class="appear-left show-on-scroll pic-prop" src="images/pic3.jpg" />
             <div class="about-me-text appear-right show-on-scroll">
                 <h2>A Web-Dev Newbie</h2>
                 I haven't been in the web-dev game for long. But, since the day I typed my first "Hello World" I haven't been able to stop thinking about code.
