--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="cursive click intro-text js-hide" onclick="makeCircles(), changeText()">
             Click here to start the fun!
         </div>
-        <div class="courier click intro-text js-appear hidden" onclick="reload()">
+        <div class="courier intro-text js-appear hidden">
             Full-stack web developer 
         </div>
     </header>
